# crostini

./: Cargo.toml  LICENSE  README.md  justfile
.zed/: settings.json
src/: executor.rs  lib.rs  main.rs
tests/: sigterm.rs
