[package]
name = "crostini"
version = "0.2.0"
edition = "2024"
description = "A minimal PID 1 container init that forwards signals and reaps zombies"
repository = "https://github.com/ricochet-rs/crostini"
license = "MIT"
keywords = ["container", "init", "oci", "pid1", "signal"]
categories = ["os::unix-apis"]

[dependencies]
libcontainer = { version = "0.6", default-features = false, optional = true }
nix = { version = "0.31", features = ["process", "signal"] }

[features]
libcontainer = ["dep:libcontainer"]

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
