[package]
name = "crostini"
version = "0.2.0"
edition = "2024"
description = "A minimal PID 1 container init that forwards signals and reaps zombies"
repository = "https://github.com/ricochet-rs/crostini"
license = "MIT"
keywords = ["container", "init", "oci", "pid1", "signal"]
categories = ["os::unix-apis"]

[dependencies]
libcontainer = { version = "=0.6.0", default-features = false, features = ["systemd", "v2"], optional = true }
nix = { version = "0.31", features = ["process", "signal"] }
tracing = "0.1"

[features]
libcontainer = ["dep:libcontainer"]

[dev-dependencies]
anyhow = "1"
nix = { version = "0.31", features = ["user"] }
scopeguard = "1"
serial_test = "3"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
